testdata/rules-tests/bad/AG-005-v1-js-hardcoded-key.ts
const OPENAI_API_KEY = "sk-abc123def456ghi789jkl012mno345p";
const ANTHROPIC_API_KEY = "sk-ant-abc123def456ghi789jkl012mno345p";
const HF_TOKEN = "hf_abc123def456ghi789jkl012mno345p";
let apiKey = "sk-proj-abc123def456ghi789jkl012mno345p678";
